[gd_scene load_steps=7 format=3 uid="uid://b0ivg4reyd48l"]

[ext_resource type="Script" uid="uid://b1jflxxxyw67b" path="res://scripts/YouDied.gd" id="1_3akcy"]
[ext_resource type="FontFile" uid="uid://dsq4oypst8yrs" path="res://Dusk Fonts/Dusk Font B3.ttf" id="1_txxux"]
[ext_resource type="StyleBox" uid="uid://bf5lod7pf26wg" path="res://scenes/fonts/orange.tres" id="3_fi02i"]
[ext_resource type="StyleBox" uid="uid://8xyrm3wauh3k" path="res://scenes/menupress.tres" id="4_8keu4"]
[ext_resource type="StyleBox" uid="uid://cp4kb2w7q3l6k" path="res://scenes/menuhoverrr.tres" id="5_j8nn3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi02i"]
bg_color = Color(0.4378288, 0, 0.09600688, 1)

[node name="YouDied" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3akcy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fi02i")

[node name="text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -420.5
offset_top = 40.0
offset_right = 420.5
offset_bottom = 176.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.88877124, 0, 0.24145472, 1)
theme_override_fonts/font = ExtResource("1_txxux")
theme_override_font_sizes/font_size = 155
text = "You died!"
horizontal_alignment = 1

[node name="text_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -391.0
offset_top = 92.0
offset_right = 391.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_txxux")
theme_override_font_sizes/font_size = 100
text = "Score: "
horizontal_alignment = 1

[node name="text_waves" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -541.5
offset_top = 398.0
offset_right = 541.5
offset_bottom = 534.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_txxux")
theme_override_font_sizes/font_size = 100
text = "Waves cleared:"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -411.0
offset_top = -237.0
offset_right = 411.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_txxux")
theme_override_font_sizes/font_size = 115
theme_override_styles/normal = ExtResource("3_fi02i")
theme_override_styles/pressed = ExtResource("4_8keu4")
theme_override_styles/hover = ExtResource("5_j8nn3")
text = "Main Menu"
autowrap_mode = 3

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
